--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     gap: 48px;
+    font-family: "Poppins", sans-serif;
 }
 
 .header_part1 > div {
@@ -27,3 +28,11 @@
     height: 36px;
     border-radius: 6px;
 }
+
+.dropdownContent {
+    display: none; /* Скрыть выпадающий список по умолчанию */
+  }
+  
+  .menuItem:hover .dropdownContent {
+    display: block; /* Отобразить выпадающий список при наведении на пункт меню */
+  }
