--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,5 +1,69 @@
 .main {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 103px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-top: 103px;
+  width: 100%;
+}
+
+.main_content {
+  width: 60%;
+  height: 432px;
+}
+
+.main_text {
+  font-size: 12px;
+  color: #fa541c;
+  text-transform: uppercase;
+}
+
+.main_title {
+  font-size: 64px;
+  color: #212b36;
+  font-family: "Barlow", sans-serif;
+  font-weight: 700;
+}
+
+.main_desc {
+  font-family: 16px;
+  color: #637381;
+  font-family: "Poppins", sans-serif;
+}
+
+.main_button {
+  display: flex;
+  align-items: center;
+  
+  gap: 24px;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+.main_btn {
+  background-color: #fa541c;
+  color: #fff;
+  text-transform: capitalize;
+  width: 132px;
+  height: 48px;
+  border-radius: 8px;
+}
+
+.main_play {
+display: flex;
+align-items: center;
+
+font-size: 15px;
+font-family: "Poppins", sans-serif;
+
+font-weight: 600;
+  
+
+}
+.main_play::before {
+    margin-right: 8px;
+    content: url(./../assets/main_images/right.svg);
+  }
+.main_pic {
+  width: 80%;
+  height: 481px;
+  margin-left: 80px;
 }
