--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     gap: 48px;
     font-family: "Poppins", sans-serif;
+    cursor: pointer;
 }
 
 .header_part1 > div {
@@ -19,20 +20,16 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    cursor: pointer;
 }
 
 .header_button {
     background-color: #212B36;
+    border: none;
     color: #fff;
     width: 83px;
     height: 36px;
     border-radius: 6px;
+    cursor: pointer;
 }
 
-.dropdownContent {
-    display: none; /* Скрыть выпадающий список по умолчанию */
-  }
-  
-  .menuItem:hover .dropdownContent {
-    display: block; /* Отобразить выпадающий список при наведении на пункт меню */
-  }
