add section services

--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -24,20 +24,52 @@
   text-align: right;
 }
 
-.stats {
-    display: flex;
-    text-align: start;
-    gap: 24px;
+
+.stats_block {
+  display: grid;
+  grid-template-columns: 1fr 2fr; /* Две колонки одинаковой ширины */
+  justify-items: center;
+  /* text-align: center; */
+  gap: 24px;
 }
+
 
 .stats_num {
-    font-size: 48px;
-    line-height: 1.2;
-    color: #212B36;
-    font-family: "Barlow", serif;
+  display: inline-block;
+  line-height: 1.2;
+  font-size: 48px;
+  margin: 0;
+  color: #212b36;
+  font-family: "Barlow", serif;
+  position: relative;
 }
 
-.stats_number > p > sup {
-    color: #FA541C;
+.stats_num::after {
+  content: "";
+  position: absolute;
+  margin: 0 24px;
+  top: 0;
+  bottom: 0;
+  width: 92px;
+  border-left: 2px solid #919EAB; /* Ширина и стиль линии */
 }
 
+.stats_number > h2 > sup {
+  color: #fa541c;
+}
+
+.stats_title {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-family: "Poppins", serif;
+  /* margin-bottom: 20px; */
+}
+
+.styles.stats_ttl {
+  font-family: "Poppins", serif;
+}
+
+.stats .stats_block:nth-child(3) {
+  margin-left: 20px;
+ 
+}
