--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -1,24 +1,45 @@
 .services_section {
-    margin-top: 120px;
+  margin-top: 120px;
 }
 
 .services_content {
-    width: 480px;
+  width: 480px;
 }
 
 .services_content > h3 {
-    font-size: 12px;
-    text-transform: uppercase;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 .services_content > h2 {
-    display: inline-block;
-    line-height: 0;
-    font-size: 48px;
-    font-weight: 700;
-    text-transform: capitalize;
+  display: inline-block;
+  line-height: 0;
+  font-size: 48px;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
 .services_content > p {
-    font-size: 16px;
+  font-size: 16px;
+}
+
+.services_cards {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px;
+}
+
+.services_cards_item {
+  background-color: #ffffff;
+  width: 244px;
+  height: 376px;
+  padding: 10px;
+  border-radius: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
