--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,36 @@
     padding: 0 144px;
 }
 
-p, h3 {
+h3 {
   color: #637381;
   font-family: "Poppins", sans-serif;
 }
 
-h1, h2 {
+h1  {
   font-family: "Barlow", sans-serif;
   color: #212B36;
+}
+
+h2 {
+  font-size: 48px;
+  font-family: "Barlow", sans-serif;
+  color: #212B36;
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+h4 {
+  color: #637381;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+p {
+  color: #637381;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
 
 button {
