--- a/src/components/Companies/Companies.module.css
+++ b/src/components/Companies/Companies.module.css
@@ -1,5 +1,5 @@
 .companies_logo {
-    padding-top: 199px;
+    margin-top: 199px;
     display: flex;
     justify-content: center;
     gap: 64px;
