--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,60 @@
 .header {
     display: flex;
     justify-content: space-between;
+    padding: 36px 0;
 }
+
+.header_links {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .header_links {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .header_links:hover .dropdownMenu,
+  .header_links .dropdown_trigger:focus + .dropdownMenu {
+    display: block;
+    max-height: 200px; /* Adjust as needed */
+    opacity: 1;
+  }
+  
+  .dropdown_trigger {
+    display: inline-block;
+  }
+  
+  .dropdownMenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 100px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    opacity: 0;
+    display: none;
+  }
+  
+  .dropdownMenu a {
+    display: block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .dropdownMenu a:hover {
+    background-color: #f5f5f5;
+  }
+  
 
 .header_part1 {
     display: flex;
