--- a/src/components/Pricing/Pricing.module.css
+++ b/src/components/Pricing/Pricing.module.css
@@ -31,5 +31,28 @@
 }
 
 .pricing_card1 {
-    
+    width: 362px;
+    height: 524px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    padding: 40px;
+}
+
+.pricing_card2 {
+    width: 362px;
+    height: 566px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    padding: 40px;
+}
+
+.pricing_card3 {
+    width: 362px;
+    height: 608px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    padding: 40px;
 }
