--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -22,40 +22,68 @@
 .aboutUs_info {
   max-width: 466px;
   text-align: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .aboutUs_info > h2 {
   font-size: 48px;
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
+
+.aboutUs_link {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 51px;
+  font-size: 15px;
+  color: #fa541c;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
+.aboutUs_link::after {
+  content: url(./../assets/aboutUs_img/right.svg);
+
+  margin-left: 8px;
+}
+
 
 
 .stats_block {
   display: grid;
-  grid-template-columns: 1fr 2fr; /* Две колонки одинаковой ширины */
-  justify-items: center;
-  /* text-align: center; */
-  gap: 24px;
+  grid-template-columns: 165px 399px; /* Две колонки одинаковой ширины */
+  /* justify-items: center;  */
+  gap: 40px;
+
+  
 }
 
+.stats_number {
+  display: flex;
+ flex-direction: column;
+ 
+}
 
 .stats_num {
-  display: inline-block;
   line-height: 1.2;
   font-size: 48px;
-  margin: 0;
+
   color: #212b36;
   font-family: "Barlow", serif;
-  position: relative;
 }
+
+
 
 .stats_num::after {
   content: "";
-  position: absolute;
-  margin: 0 24px;
-  top: 0;
-  bottom: 0;
+  opacity: 0.4;
+  margin-left: 34px;
+  /* top: 0;
+  bottom: 0; */
   width: 92px;
-  border-left: 2px solid #919EAB; /* Ширина и стиль линии */
+  border-left: 1px solid #919eab; 
 }
 
 .stats_number > h2 > sup {
@@ -73,7 +101,4 @@
   font-family: "Poppins", serif;
 }
 
-.stats .stats_block:nth-child(3) {
-  margin-left: 20px;
- 
-}
+
