--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -54,8 +54,8 @@
 .stats_block {
   display: grid;
   grid-template-columns: 165px 399px; /* Две колонки одинаковой ширины */
-  /* justify-items: center;  */
-  gap: 40px;
+  justify-items: center; 
+  
 
   
 }
@@ -63,6 +63,7 @@
 .stats_number {
   display: flex;
  flex-direction: column;
+ gap:  40px ;
  
 }
 
