--- a/src/components/Case/Case.module.css
+++ b/src/components/Case/Case.module.css
@@ -2,8 +2,6 @@
   margin-top: 120px;
 }
 
-
-
 .case_section > h2 {
   font-size: 48px;
   font-weight: 700;
@@ -15,11 +13,84 @@
 .case_cards {
   margin-top: 120px;
   width: 100%;
-  height: 768px;
-  position: relative;
+  height: 100%;
 }
 
-.case_desc > span {
+.case_item1 {
+  width: 564px;
+  height: 372px;
+
+  display: flex;
+  margin-left: 196px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-sizing: border-box; */
+}
+
+.case_content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px 24px;
+}
+.case_title {
+  color: #fa541c;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.case_content > h2 {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  font-size: 24px;
+  color: #212b36;
+}
+
+.case_content > p {
+  font-size: 14px;
+}
+
+.case_link {
+  color: #637381;
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  font-weight: 600;
+  display: flex;
+  margin-top: auto;
+  align-self: flex-end;
+}
+
+.case_link::after {
+  content: url(./../assets/case_img/iconbase.svg);
+}
+
+.case_img3 {
+  width: 172px;
+  height: 172px;
+  object-fit: cover;
+}
+
+.case_item2 {
+  margin-top: -69px; 
+  display: flex;
+ 
+
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+
+
+/* .case_block {
+  width: 172px;
+  height: 229px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+/* .case_desc > span {
   font-size: 12px;
   text-transform: uppercase;
   color: #919EAB;
@@ -36,9 +107,8 @@
 }
 
 .case_item1 {
-  position: absolute;
-  left: 0;
-  top: 269px;
+  
+  
   width: 172px;
   height: 229px;
   display: flex;
@@ -51,7 +121,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+
   z-index: 1;
 }
 
@@ -70,9 +140,7 @@
 .case_item2 {
   width: 564px;
   height: 372px;
-  position: absolute;
-  top: 0;
-  left: 196px;
+ 
   display: flex;
   background-color: #ffffff;
   border-radius: 16px;
@@ -91,7 +159,7 @@
   margin-left: 24px;
   width: 224px;
   height: 128px;
-  position: relative;
+ 
 }
 
 .case_content > h2 {
@@ -114,16 +182,15 @@
 }
 
 .case_link::after {
-  position: absolute;
+
   content: url(./../assets/case_img/iconbase.svg);
 
  
 }
 
 .case_item3 {
-  position: absolute;
-  top: 200px;
-  right: 196px;
+
+
   width: 172px;
   height: 172px;
 
@@ -160,12 +227,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+ 
   z-index: 1;
 }
 
 .case_item5 {
-  position: absolute;
+
   top: 396px;
   left: 196px;
   width: 172px;
@@ -182,14 +249,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+
   z-index: 1;
 }
 
 .case_item6 {
   width: 564px;
   height: 372px;
-  position: absolute;
+ 
   top: 396px;
   left: 392px;
   display: flex;
@@ -200,7 +267,7 @@
 }
 
 .case_content > .case_link {
-  position: absolute;
+  
   bottom: 24px;
   right: 24px;
   color: #637381;
@@ -213,12 +280,12 @@
   margin-top: 131px;
   width: 1152px;
   height: 80px;
-  position: relative;
+
   
 }
 
 .case_view > span {
-  position: absolute;
+
   font-size: 15px;
   color: #FA541C;
   font-family: "Poppnis", serif;
@@ -229,6 +296,6 @@
 
 .case_view > span::after {
   content: url(./../assets/case_img/iconbase.svg);
-  position: absolute;
+ 
   left: 12;
-}
+} */
