--- a/src/components/Case/Case.module.css
+++ b/src/components/Case/Case.module.css
@@ -12,8 +12,7 @@
 
 .case_cards {
   margin-top: 120px;
-  width: 100%;
-  height: 100%;
+  
 }
 
 .case_item1 {
@@ -79,6 +78,19 @@
   justify-content: space-between;
   /* align-items: center; */
 }
+
+.case_item3 {
+  width: 564px;
+  height: 372px;
+
+  display: flex;
+  margin-left: 392px;
+  background-color: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-sizing: border-box; */
+}
+
 
 
 
