--- a/src/components/Case/Case.module.css
+++ b/src/components/Case/Case.module.css
@@ -1,5 +1,6 @@
 .case_section {
   margin-top: 120px;
+  
 }
 
 .case_section > h2 {
@@ -11,14 +12,15 @@
 }
 
 .case_cards {
+  width: 100%;
+  height: 100%;
   margin-top: 120px;
   
 }
 
 .case_item1 {
-  width: 564px;
-  height: 372px;
-
+max-width: 564px;
+  max-height: 372px;
   display: flex;
   margin-left: 196px;
   background-color: #ffffff;
@@ -76,7 +78,13 @@
  
 
   justify-content: space-between;
+  align-items: flex-start;
   /* align-items: center; */
+}
+
+.case_block {
+  display: flex;
+  align-items: flex-end;
 }
 
 .case_item3 {
