--- a/src/components/Case/Case.module.css
+++ b/src/components/Case/Case.module.css
@@ -1,6 +1,5 @@
 .case_section {
   margin-top: 120px;
-  
 }
 
 .case_section > h2 {
@@ -15,11 +14,15 @@
   width: 100%;
   height: 100%;
   margin-top: 120px;
-  
 }
 
 .case_item1 {
-max-width: 564px;
+  display: flex;
+  gap: 24px;
+}
+
+.case_info {
+  max-width: 564px;
   max-height: 372px;
   display: flex;
   margin-left: 196px;
@@ -58,49 +61,71 @@ max-width: 564px;
   font-size: 13px;
   font-weight: 600;
   display: flex;
-  margin-top: auto;
-  align-self: flex-end;
+
+  margin-top: 120px;
+  align-self: self-end;
 }
 
 .case_link::after {
   content: url(./../assets/case_img/iconbase.svg);
+
+  margin-left: 8px;
 }
 
 .case_img3 {
   width: 172px;
   height: 172px;
   object-fit: cover;
+  /* display: flex; */
+
+  margin-top: 200px;
 }
 
 .case_item2 {
-  margin-top: -69px; 
+  margin-top: -69px;
   display: flex;
- 
 
   justify-content: space-between;
   align-items: flex-start;
   /* align-items: center; */
 }
 
-.case_block {
+.case_block2 {
   display: flex;
-  align-items: flex-end;
+  /* align-items: flex-end; */
+  margin-right: -100px;
 }
 
 .case_item3 {
-  width: 564px;
-  height: 372px;
-
   display: flex;
-  margin-left: 392px;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+/* .case_block3 {
+  display: flex;
+
+} */
+
+.case_img5 {
+  width: 172px;
+  height: 172px;
+  object-fit: cover;
+  /* display: flex; */
+
+  margin-left: 196px;
+}
+
+.case_info2 {
+  max-width: 564px;
+  max-height: 372px;
+  display: flex;
+
   background-color: #ffffff;
   border-radius: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   /* box-sizing: border-box; */
 }
-
-
-
 
 /* .case_block {
   width: 172px;
