--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -7,11 +7,13 @@
 }
 
 .posts_section {
+    display: flex;
+    gap: 32px;
     margin-top: 80px;
 }
 
 .posts_card1 {
-    width: 357px;
+    min-width: 357px;
     height: 482px;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -19,7 +21,22 @@
     padding: 40px;
 }
 
+.posts_card1 > h4 {
+    margin-top: 16px;
+    font-size: 24px;
+    color: #212B36;
+    text-transform: none;
+    font-family: "Barlow", serif;
+}
+
 .posts_card1 > h5 {
     font-size: 12px;
     color: #919EAB;
 }
+
+.posts_img {
+display: flex;
+align-items: flex-end;
+ 
+}
+
